0022887: Request to make Intf_InterferencePolygon2d class thread-safe.