src/Intf/Intf_Polygon2d.cxx
@@ -1,0 +1,16 @@
+// File:      Intf_Polygon2d.cxx
+// Created:   Fri Feb 10 17:49:16 2012
+// Author:    Sergey ZERCHANINOV
+// Copyright: OPEN CASCADE SAS 2012
+
+#include <Intf_Polygon2d.ixx>
+
+//=======================================================================
+//function : Closed
+//purpose  : 
+//=======================================================================
+
+Standard_Boolean Intf_Polygon2d::Closed () const
+{
+  return Standard_False;
+}
